feat(pop-web): implement case-management page, integrate NeoplasticEntity service with preliminary form
